src/ty/snapshots/tvm__ty__tests__bad_block_expr.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        let v: int = do {};\n    \"#)"
---
error: type mismatch between "()" and "int"
1 |  let v: int = do {};
  |               ^^^^^


